--- a/index.html
+++ b/index.html
@@ -592,9 +592,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Seminar workshop from Kwikkiangia and IAI.
               </p>
 
             </li>
@@ -606,9 +604,7 @@
               <span>2017 — 2020</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Badminton player from SMA Negeri 45 for 3 years.
               </p>
 
             </li>
@@ -620,9 +616,7 @@
               <span>2014 — 2017</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Science club from SMP Marie Joseph for 3 years.
               </p>
 
             </li>
